# menutools

./: .gitignore  LICENCE  README.md  setup.cfg  setup.py
.github/workflows/: CodeQL.yml  ci.yml  requirements_lint.txt
example/: customize.py  full.py  simpe.py  simple.py
menutools/: __init__.py
src/: __init__.py  menus.py
