[metadata]
name = menus
version = 1.0.0
description = Create a command-line menu
long_description = file: README.md
long_description_content_typr = text/markdown
license = MIT
author = Seyed Jafar Yaghoubi
author_email = algo3xp3rt@gmail.com
url = https://github.com/J-Yaghoubi/menus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
   
[options]
included_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    pytest>=3.7
    tox

    
[options.packages.find]
where = src